--- a/HTML File.html
+++ b/HTML File.html
@@ -23,6 +23,7 @@
 ">+3</button>
 <button onclick="
     cartQuantity = 0;
+    console.log('Cart was reset');
     console.log(`Cart Quantity : ${cartQuantity}`);
 ">Reset cart</button>
 
